--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "react": "^18.1.0",
+    "react-dom": "18.1.0",
+    "@chakra-ui/react": "2.0.0-next.2",
+    "next": "12.1.6",
     "@babel/core": "^7.17.10",
-    "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "framer-motion": "^6.3.3",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "framer-motion": "^6.3.3"
   },
   "devDependencies": {
+    "jest": "^28.0.2",
     "@testing-library/react": "^13.1.1",
-    "@types/jest": "^27.4.1",
-    "@types/node": "17.0.31",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
+    "husky": "^7.0.4",
+    "prettier": "^2.6.2",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
-    "husky": "^7.0.4",
-    "jest": "^28.0.2",
-    "prettier": "^2.6.2",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "@types/jest": "^27.4.1",
+    "@types/node": "17.0.31",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "18.0.3"
   }
 }
