--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "^18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "shopify-buy": "^2.15.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@testing-library/react": "^13.1.1",
@@ -30,6 +32,7 @@
     "@types/node": "17.0.31",
     "@types/react": "^18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/shopify-buy": "^2.10.10",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
