--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "18.0.3",
     "@types/shopify-buy": "^2.10.10",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
