--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "12.1.6",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
     "reset-css": "^5.0.1",
     "shopify-buy": "^2.15.1",
     "swr": "^1.3.0"
